--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda'
+apply from: '../constants.gradle'
 
 buildscript {
     repositories {
@@ -80,6 +81,18 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
 
+    compile project(modulePrefix + 'library-core')
+    compile project(modulePrefix + 'library-dash')
+    compile project(modulePrefix + 'library-hls')
+    compile project(modulePrefix + 'library-smoothstreaming')
+    compile project(modulePrefix + 'library-ui')
+    //withExtensionsCompile project(path: modulePrefix + 'extension-ffmpeg')
+    //withExtensionsCompile project(path: modulePrefix + 'extension-flac')
+    //withExtensionsCompile project(path: modulePrefix + 'extension-ima')
+    //withExtensionsCompile project(path: modulePrefix + 'extension-opus')
+    //withExtensionsCompile project(path: modulePrefix + 'extension-vp9')
+    //withExtensionsCompile project(path: modulePrefix + 'extension-rtmp')
+
     //compile 'com.jakewharton:butterknife:8.2.1'
     //apt 'com.jakewharton:butterknife-compiler:8.2.1'
 
@@ -104,6 +117,6 @@ dependencies {
     //compile 'me.everything:overscroll-decor-android:1.0.4'//https://github.com/EverythingMe/overscroll-decor
     compile 'com.daasuu:EasingInterpolator:1.0.0'//need for shine button
 
-    compile 'com.google.android.gms:play-services-plus:10.2.1'
+    compile 'com.google.android.gms:play-services-plus:11.0.4'
 
 }
