--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "com.uiza.app"
+        applicationId "zzz.uiza.app"
         minSdkVersion 16
         targetSdkVersion 21
         versionCode 1
