--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -63,4 +63,6 @@ dependencies {
     withExtensionsCompile project(path: modulePrefix + 'extension-opus')
     withExtensionsCompile project(path: modulePrefix + 'extension-vp9')
     withExtensionsCompile project(path: modulePrefix + 'extension-rtmp')
+
+    compile 'com.google.code.gson:gson:2.7'
 }
