--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,14 +64,14 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    /*productFlavors {
+    productFlavors {
         noExtensions {
             dimension "extensions"
         }
         withExtensions {
             dimension "extensions"
         }
-    }*/
+    }
 }
 
 repositories {
@@ -90,17 +90,22 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
 
+    //start exo player
     compile project(modulePrefix + 'library-core')
     compile project(modulePrefix + 'library-dash')
     compile project(modulePrefix + 'library-hls')
     compile project(modulePrefix + 'library-smoothstreaming')
     compile project(modulePrefix + 'library-ui')
-    //withExtensionsCompile project(path: modulePrefix + 'extension-ffmpeg')
-    //withExtensionsCompile project(path: modulePrefix + 'extension-flac')
+
+    compile project(modulePrefix + 'extension-ima')
+
+    withExtensionsCompile project(path: modulePrefix + 'extension-ffmpeg')
+    withExtensionsCompile project(path: modulePrefix + 'extension-flac')
     //withExtensionsCompile project(path: modulePrefix + 'extension-ima')
-    //withExtensionsCompile project(path: modulePrefix + 'extension-opus')
-    //withExtensionsCompile project(path: modulePrefix + 'extension-vp9')
-    //withExtensionsCompile project(path: modulePrefix + 'extension-rtmp')
+    withExtensionsCompile project(path: modulePrefix + 'extension-opus')
+    withExtensionsCompile project(path: modulePrefix + 'extension-vp9')
+    withExtensionsCompile project(path: modulePrefix + 'extension-rtmp')
+    //end exo player
 
     //compile 'com.jakewharton:butterknife:8.2.1'
     //apt 'com.jakewharton:butterknife-compiler:8.2.1'
