--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -168,7 +168,7 @@
             android:name="vn.loitp.app.activity.demo.video.videodemo3.VideoDemo3Activity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="vn.loitp.app.activity.demo.video.videodemo3.TestVideoDemo3Activity"
+            android:name="vn.loitp.app.activity.demo.video.videodemo4.VideoDemo4Activity"
             android:screenOrientation="sensor" />
         <activity
             android:name="vn.loitp.app.activity.demo.video.VideoMenuActivity"
