--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,11 @@ android {
             dimension "extensions"
         }
     }
+
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
 }
 
 repositories {
