--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,11 @@
             android:name="vn.loitp.app.activity.MenuActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
         <activity
             android:name="vn.loitp.app.activity.api.test.TestAPIActivity"
@@ -175,7 +175,13 @@
             android:screenOrientation="sensor" />
         <activity
             android:name="vn.loitp.app.activity.demo.video.VideoMenuActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name="vn.loitp.app.activity.demo.video.videodemo5.UizaVideoMenuActivity"
             android:screenOrientation="portrait" />
