--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -172,7 +172,7 @@
             android:screenOrientation="sensor" />
         <activity
             android:name="vn.loitp.app.activity.demo.video.videodemo5.VideoDemo5Activity"
-            android:screenOrientation="sensor" />
+            android:screenOrientation="portrait" />
         <activity
             android:name="vn.loitp.app.activity.demo.video.VideoMenuActivity"
             android:screenOrientation="portrait">
