update splash screen

--- a/demouiza/src/main/AndroidManifest.xml
+++ b/demouiza/src/main/AndroidManifest.xml
@@ -176,11 +176,11 @@
         <activity
             android:name="vn.loitp.app.activity.demo.video.VideoMenuActivity"
             android:screenOrientation="portrait">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
         <activity
             android:name="vn.loitp.app.activity.demo.video.videodemo5.UizaVideoMenuActivity"
@@ -228,7 +228,15 @@
 
 
         <!--FOR DEMO UIZA-->
+        <activity
+            android:name="vn.loitp.app.uiza.SplashActivity"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <!--FOR DEMO UIZA-->
 
     </application>
