update home screen

--- a/demouiza/src/main/AndroidManifest.xml
+++ b/demouiza/src/main/AndroidManifest.xml
@@ -229,7 +229,7 @@
 
         <!--FOR DEMO UIZA-->
         <activity
-            android:name="vn.loitp.app.uiza.SplashActivity"
+            android:name="vn.loitp.app.uiza.activity.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -237,6 +237,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="vn.loitp.app.uiza.activity.HomeActivity"
+            android:screenOrientation="portrait" />
         <!--FOR DEMO UIZA-->
 
     </application>
