update home screen

--- a/demouiza/src/main/AndroidManifest.xml
+++ b/demouiza/src/main/AndroidManifest.xml
@@ -229,7 +229,7 @@
 
         <!--FOR DEMO UIZA-->
         <activity
-            android:name="vn.loitp.app.uiza.activity.SplashActivity"
+            android:name="vn.loitp.app.uiza.splash.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -238,7 +238,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="vn.loitp.app.uiza.activity.HomeActivity"
+            android:name="vn.loitp.app.uiza.home.HomeActivity"
             android:screenOrientation="portrait" />
         <!--FOR DEMO UIZA-->
 
