--- a/demouiza/src/main/AndroidManifest.xml
+++ b/demouiza/src/main/AndroidManifest.xml
@@ -240,6 +240,9 @@
         <activity
             android:name="vn.loitp.app.uiza.home.HomeActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name="vn.loitp.app.uiza.player.PlayerActivity"
+            android:screenOrientation="portrait" />
         <!--FOR DEMO UIZA-->
 
     </application>
