--- a/demouiza/src/main/AndroidManifest.xml
+++ b/demouiza/src/main/AndroidManifest.xml
@@ -245,7 +245,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name="vn.loitp.app.uiza.login.LoginActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
         <!--FOR DEMO UIZA-->
 
     </application>
