--- a/demouiza/src/main/AndroidManifest.xml
+++ b/demouiza/src/main/AndroidManifest.xml
@@ -242,6 +242,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name="vn.loitp.app.uiza.player.PlayerActivity"
+            android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait" />
         <activity
             android:name="vn.loitp.app.uiza.login.LoginActivity"
