--- a/extensions/mediasession/src/main/AndroidManifest.xml
+++ b/extensions/mediasession/src/main/AndroidManifest.xml
@@ -14,4 +14,4 @@
      limitations under the License.
 -->
 
-<manifest package="com.google.android.exoplayer2.ext.mediasession"/>
+<manifest package="io.uiza.sdk.ext.mediasession" />
