--- a/extensions/rtmp/src/main/AndroidManifest.xml
+++ b/extensions/rtmp/src/main/AndroidManifest.xml
@@ -14,4 +14,4 @@
      limitations under the License.
 -->
 
-<manifest package="com.google.android.exoplayer2.ext.rtmp"/>
+<manifest package="io.uiza.sdk.ext.rtmp" />
