--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,12 +17,12 @@ buildscript {
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.0"
 
     defaultConfig {
-        applicationId "zzz.uiza.app"
-        minSdkVersion 16
+        applicationId "zzz.uiza.moduleapp"
+        minSdkVersion 17
         targetSdkVersion 21
         versionCode 1
         versionName "1"
@@ -32,12 +32,9 @@ android {
         renderscriptSupportModeEnabled true    // Enable RS support
     }
 
-    signingConfigs {
+    /*signingConfigs {
         release {
-            /*storeFile file("keystore.jks")
-            storePassword "\$\$Live\$t@r@@"
-            keyAlias "livestar"
-            keyPassword "\$\$Live\$t@r@@"*/
+            keyPassword "\$\$Live\$t@r@@"*
             storeFile file("keystore.jks")
             storePassword "04021993"
             keyAlias "loi"
@@ -50,12 +47,12 @@ android {
             //proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
-    }
+    }*/
 
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
             output.outputFile = new File(
-                    output.outputFile.parent, "BaseMaster_" + buildType.name + "_" + defaultConfig.versionName + "_" + defaultConfig.versionCode + ".apk")
+                    output.outputFile.parent, "ModuleApp_" + buildType.name + "_" + defaultConfig.versionName + "_" + defaultConfig.versionCode + ".apk")
         }
     }
 
@@ -92,13 +89,14 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':core')
-    compile project(':utils')
+    compile project(':corebase')
+    //compile project(':utils')
     //compile project(':uizalib')
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:support-v4:26.0.0'
+    compile 'com.android.support:appcompat-v7:26.0.0'
+    compile 'com.android.support:design:26.0.0'
+    compile 'com.android.support:recyclerview-v7:26.0.0'
+    compile 'com.android.support:cardview-v7:26.0.0'
 
     //start exo player
     compile project(modulePrefix + 'library-core')
@@ -120,7 +118,7 @@ dependencies {
     //compile 'com.jakewharton:butterknife:8.2.1'
     //apt 'com.jakewharton:butterknife-compiler:8.2.1'
 
-    compile 'io.reactivex:rxandroid:1.2.1'
+    /*compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
 
     compile 'com.android.support:multidex:1.0.1'
@@ -141,6 +139,6 @@ dependencies {
     //compile 'me.everything:overscroll-decor-android:1.0.4'//https://github.com/EverythingMe/overscroll-decor
     compile 'com.daasuu:EasingInterpolator:1.0.0'//need for shine button
 
-    compile 'com.google.android.gms:play-services-plus:11.0.4'
+    compile 'com.google.android.gms:play-services-plus:11.0.4'*/
 
 }
