--- a/demouiza/build.gradle
+++ b/demouiza/build.gradle
@@ -16,12 +16,12 @@ buildscript {
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.0"
 
     defaultConfig {
-        applicationId "zzz.uiza.demo"
-        minSdkVersion 16
+        applicationId "zzz.uiza.moduledemouiza"
+        minSdkVersion 17
         targetSdkVersion 21
         versionCode 1
         versionName "1"
@@ -33,10 +33,6 @@ android {
 
     signingConfigs {
         release {
-            /*storeFile file("keystore.jks")
-            storePassword "\$\$Live\$t@r@@"
-            keyAlias "livestar"
-            keyPassword "\$\$Live\$t@r@@"*/
             storeFile file("keystore.jks")
             storePassword "04021993"
             keyAlias "loi"
@@ -54,7 +50,7 @@ android {
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
             output.outputFile = new File(
-                    output.outputFile.parent, "BaseMaster_" + buildType.name + "_" + defaultConfig.versionName + "_" + defaultConfig.versionCode + ".apk")
+                    output.outputFile.parent, "ModuleDemoUiza_" + buildType.name + "_" + defaultConfig.versionName + "_" + defaultConfig.versionCode + ".apk")
         }
     }
 
@@ -78,6 +74,7 @@ android {
     }
 
     dexOptions {
+        incremental true
         javaMaxHeapSize "4g"
     }
 }
@@ -91,17 +88,16 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':core')
-    compile project(':utils')
+    compile project(':corebase')
+    //compile project(':utils')
     //compile project(':uizalib')
     //compile project(':uizalibrary')
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.daimajia.easing:library:2.0@aar'
-    compile 'com.daimajia.androidanimations:library:2.2@aar'
-    compile 'com.github.mmin18:realtimeblurview:1.1.0'
+    compile 'com.android.support:support-v4:26.0.0'
+    compile 'com.android.support:appcompat-v7:26.0.0'
+    compile 'com.android.support:design:26.0.0'
+    compile 'com.android.support:recyclerview-v7:26.0.0'
+    compile 'com.android.support:cardview-v7:26.0.0'
+
     //start exo player
     compile project(modulePrefix + 'library-core')
     compile project(modulePrefix + 'library-dash')
@@ -119,7 +115,7 @@ dependencies {
     withExtensionsCompile project(path: modulePrefix + 'extension-rtmp')
     //end exo player
 
-    //compile 'com.jakewharton:butterknife:8.2.1'
+    /*//compile 'com.jakewharton:butterknife:8.2.1'
 
     //apt 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'io.reactivex:rxandroid:1.2.1'
@@ -135,5 +131,5 @@ dependencies {
     //compile 'me.everything:overscroll-decor-android:1.0.4'//https://github.com/EverythingMe/overscroll-decor
     compile 'com.daasuu:EasingInterpolator:1.0.0'//need for shine button
 
-    //compile 'com.google.android.gms:play-services-plus:11.0.4'
+    //compile 'com.google.android.gms:play-services-plus:11.0.4'*/
 }
