--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 ## Project-wide Gradle settings.
 android.useDeprecatedNdk=true
 buildDir=buildout
+org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=4096m -XX:+HeapDumpOnOutOfMemoryError
