--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -19,8 +19,9 @@ android {
     buildToolsVersion project.ext.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion project.ext.targetSdkVersion
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -49,9 +50,32 @@ android {
             dimension "extensions"
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude 'lib/armeabi-v7a/libmp3lame.so'
+        pickFirst 'lib/arm64-v8a/libRSSupport.so'
+        pickFirst 'lib/armeabi-v7a/librsjni.so'
+        pickFirst 'lib/armeabi-v7a/libRSSupport.so'
+        pickFirst 'lib/x86/libRSSupport.so'
+        pickFirst 'lib/x86_64/libRSSupport.so'
+        pickFirst 'lib/mips/librsjni.so'
+        pickFirst 'lib/mips/libRSSupport.so'
+        pickFirst 'lib/arm64-v8a/librsjni.so'
+        pickFirst 'lib/x86/librsjni.so'
+        pickFirst 'lib/x86_64/librsjni.so'
+    }
 }
 
 dependencies {
+    //compile project(':core')
+
     compile project(modulePrefix + 'library-core')
     compile project(modulePrefix + 'library-dash')
     compile project(modulePrefix + 'library-hls')
@@ -67,4 +91,5 @@ dependencies {
     withExtensionsCompile project(path: modulePrefix + 'extension-rtmp')
 
     compile 'com.google.code.gson:gson:2.7'
+    compile 'com.android.support:multidex:1.0.0'
 }
