--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.uiza.moduledemo"
-    android:versionCode="2503"
-    android:versionName="2.5.3">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.uiza.moduledemo">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -15,9 +14,9 @@
         android:name="android.hardware.touchscreen"
         android:required="false" />
 
-    <uses-sdk
-        android:minSdkVersion="16"
-        android:targetSdkVersion="25" />
+    <!--<uses-sdk
+        android:minSdkVersion="17"
+        android:targetSdkVersion="25" />-->
 
     <application
         android:name="com.google.demo.DemoApplication"
@@ -25,7 +24,9 @@
         android:banner="@drawable/ic_banner"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/application_name"
-        android:largeHeap="true">
+        android:largeHeap="true"
+        tools:overrideLibrary="io.uiza.sdk"
+        tools:replace="android:label,android:allowBackup">
 
         <activity
             android:name="com.google.demo.SampleChooserActivity"
