--- a/demouiza/build.gradle
+++ b/demouiza/build.gradle
@@ -108,7 +108,7 @@ dependencies {
     compile project(modulePrefix + 'library-smoothstreaming')
     compile project(modulePrefix + 'library-ui')
 
-    compile project(modulePrefix + 'extension-ima')
+    //compile project(modulePrefix + 'extension-ima')
 
     withExtensionsCompile project(path: modulePrefix + 'extension-ffmpeg')
     withExtensionsCompile project(path: modulePrefix + 'extension-flac')
