--- a/demouiza/build.gradle
+++ b/demouiza/build.gradle
@@ -102,7 +102,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.0.0'
 
     //start exo player
-    compile project(modulePrefix + 'library-core')
+    compile project(modulePrefix + 'library-ui')
+    /*compile project(modulePrefix + 'library-core')
     compile project(modulePrefix + 'library-dash')
     compile project(modulePrefix + 'library-hls')
     compile project(modulePrefix + 'library-smoothstreaming')
@@ -116,7 +117,7 @@ dependencies {
     withExtensionsCompile project(path: modulePrefix + 'extension-opus')
     withExtensionsCompile project(path: modulePrefix + 'extension-vp9')
     withExtensionsCompile project(path: modulePrefix + 'extension-rtmp')
-    //end exo player
+    //end exo player*/
 
     /*//compile 'com.jakewharton:butterknife:8.2.1'
 
