--- a/corebase/build.gradle
+++ b/corebase/build.gradle
@@ -75,4 +75,7 @@ dependencies {
     //compile 'cn.jzvd:jiaozivideoplayer:6.1.1'
 
     compile 'com.google.android.gms:play-services-ads:11.0.4'
+
+    //https://github.com/pedrovgs/DraggablePanel
+    compile 'com.github.pedrovgs:draggablepanel:1.9'
 }
