set size surface view

--- a/demouiza/src/main/AndroidManifest.xml
+++ b/demouiza/src/main/AndroidManifest.xml
@@ -217,6 +217,9 @@
         <activity
             android:name="vn.loitp.app.uiza.home.v2.Home2Activity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name="vn.loitp.app.uiza.search.SearchActivity"
+            android:screenOrientation="portrait" />
         <!--FOR DEMO UIZA-->
 
     </application>
