--- a/demouiza/src/main/AndroidManifest.xml
+++ b/demouiza/src/main/AndroidManifest.xml
@@ -220,7 +220,7 @@
             android:screenOrientation="portrait" />
 
         <activity
-            android:name="vn.loitp.app.uiza.home.cannotslide.HomeCannotSlideActivity"
+            android:name="vn.loitp.app.uiza.home.v2.cannotslide.HomeV2CannotSlideActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name="vn.loitp.app.uiza.login.LoginActivity"
@@ -230,13 +230,20 @@
             android:name="vn.loitp.app.uiza.setting.SettingActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="vn.loitp.app.uiza.home.cansilde.HomeCanSlideActivity"
+            android:name="vn.loitp.app.uiza.home.v2.cansilde.HomeV2CanSlideActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
             android:screenOrientation="portrait" />
         <activity
             android:name="vn.loitp.app.uiza.search.SearchActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible" />
+        <activity
+            android:name="vn.loitp.app.uiza.home.v1.cannotslide.HomeV1CannotSlideActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="vn.loitp.app.uiza.home.v1.cansilde.HomeV1CanSlideActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
+            android:screenOrientation="portrait" />
         <!--FOR DEMO UIZA-->
 
     </application>
