--- a/demouiza/src/main/AndroidManifest.xml
+++ b/demouiza/src/main/AndroidManifest.xml
@@ -234,7 +234,7 @@
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
             android:screenOrientation="portrait" />
         <activity
-            android:name="vn.loitp.app.uiza.search.SearchActivity"
+            android:name="vn.loitp.app.uiza.home.v1.cannotslide.SearchV1Activity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible" />
         <activity
