--- a/demouiza/src/main/AndroidManifest.xml
+++ b/demouiza/src/main/AndroidManifest.xml
@@ -244,6 +244,10 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible" />
         <activity
+            android:name="vn.loitp.app.uiza.home.v2.cannotslide.SearchV2Activity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateVisible" />
+        <activity
             android:name="vn.loitp.app.uiza.home.v1.cannotslide.HomeV1CannotSlideActivity"
             android:screenOrientation="portrait" />
         <activity
