--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':app', ':core', ':utils', ':demouiza', ':corebase', ':demouiza2'
+include ':demouiza', ':corebase', ':demouiza2'
 // Copyright (C) 2016 The Android Open Source Project
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
