--- a/corebase/build.gradle
+++ b/corebase/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '26.0.0'
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         minSdkVersion 17
@@ -30,11 +30,6 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
 
-    /*androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    testCompile 'junit:junit:4.12'*/
-
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
     compile 'com.android.support:support-v4:26.1.0'
@@ -42,41 +37,23 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
-
     compile 'org.jsoup:jsoup:1.10.2'
-
-    //compile 'com.jakewharton:butterknife:8.2.1'
-    //apt 'com.jakewharton:butterknife-compiler:8.2.1'
-
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.3.0'
-
     compile 'com.android.support:multidex:1.0.3'
-
     compile 'org.greenrobot:eventbus:3.0.0'
 
     compile 'com.daimajia.easing:library:2.0@aar'
     compile 'com.daimajia.androidanimations:library:2.2@aar'
 
-    //compile 'com.github.mmin18:realtimeblurview:1.1.0'
-
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'jp.wasabeef:glide-transformations:2.0.2'
+    //compile 'jp.wasabeef:glide-transformations:2.0.2'
 
-    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.daasuu:EasingInterpolator:1.0.0'
 
-    compile 'com.daasuu:EasingInterpolator:1.0.0'//need for shine button
-
-    compile 'com.google.android.gms:play-services-plus:11.8.0'
-
-    //compile 'com.google.android.exoplayer:exoplayer:r2.5.4'
-    //compile 'com.google.android.exoplayer:extension-ima:r2.5.4'
-
-    //compile 'cn.jzvd:jiaozivideoplayer:6.1.1'
+    //compile 'com.google.android.gms:play-services-plus:11.8.0'
 
     compile 'com.google.android.gms:play-services-ads:11.8.0'
-
-    //https://github.com/pedrovgs/DraggablePanel
-    //compile 'com.github.pedrovgs:draggablepanel:1.9'
-    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.nineoldandroids:library:2.4.0'//for draggable view
 }
