--- a/corebase/build.gradle
+++ b/corebase/build.gradle
@@ -38,13 +38,15 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'org.jsoup:jsoup:1.10.2'
+
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.3.0'
+
     compile 'com.android.support:multidex:1.0.3'
     compile 'org.greenrobot:eventbus:3.0.0'
 
-    compile 'com.daimajia.easing:library:2.0@aar'
-    compile 'com.daimajia.androidanimations:library:2.2@aar'
+    //compile 'com.daimajia.easing:library:2.0@aar'
+    //compile 'com.daimajia.androidanimations:library:2.2@aar'
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
     //compile 'jp.wasabeef:glide-transformations:2.0.2'
