--- a/corebase/build.gradle
+++ b/corebase/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'org.jsoup:jsoup:1.10.2'
+    //compile 'org.jsoup:jsoup:1.10.2'
 
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.3.0'
@@ -56,6 +56,6 @@ dependencies {
 
     //compile 'com.google.android.gms:play-services-plus:11.8.0'
 
-    compile 'com.google.android.gms:play-services-ads:11.8.0'
+    //compile 'com.google.android.gms:play-services-ads:11.8.0'
     compile 'com.nineoldandroids:library:2.4.0'//for draggable view
 }
