--- a/demouiza/build.gradle
+++ b/demouiza/build.gradle
@@ -10,14 +10,14 @@ buildscript {
     }
     dependencies {
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
+        classpath 'me.tatarka:gradle-retrolambda:3.4.0'
         //classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         applicationId "zzz.uiza.moduledemouiza"
@@ -71,6 +71,7 @@ android {
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
+        disable 'MissingTranslation'
     }
 
     dexOptions {
@@ -87,52 +88,5 @@ repositories {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-
-    //compile project(':core')
-
-    //compile project(':corebase')
-    //compile project(':utils')
-    //compile project(':uizalib')
-    //compile project(':uizalibrary')
-    //compile 'com.android.support:support-v4:26.0.0'
-    //compile 'com.android.support:appcompat-v7:26.0.0'
-    //compile 'com.android.support:design:26.0.0'
-    //compile 'com.android.support:recyclerview-v7:26.0.0'
-    //compile 'com.android.support:cardview-v7:26.0.0'
-
-    //start exo player
     compile project(modulePrefix + 'library-ui')
-    /*compile project(modulePrefix + 'library-core')
-    compile project(modulePrefix + 'library-dash')
-    compile project(modulePrefix + 'library-hls')
-    compile project(modulePrefix + 'library-smoothstreaming')
-    compile project(modulePrefix + 'library-ui')
-
-    //compile project(modulePrefix + 'extension-ima')
-
-    withExtensionsCompile project(path: modulePrefix + 'extension-ffmpeg')
-    withExtensionsCompile project(path: modulePrefix + 'extension-flac')
-    //withExtensionsCompile project(path: modulePrefix + 'extension-ima')
-    withExtensionsCompile project(path: modulePrefix + 'extension-opus')
-    withExtensionsCompile project(path: modulePrefix + 'extension-vp9')
-    withExtensionsCompile project(path: modulePrefix + 'extension-rtmp')
-    //end exo player*/
-
-    /*//compile 'com.jakewharton:butterknife:8.2.1'
-
-    //apt 'com.jakewharton:butterknife-compiler:8.2.1'
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.1.6'
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.daimajia.easing:library:2.0@aar'
-    compile 'com.daimajia.androidanimations:library:2.2@aar'
-    compile 'com.github.mmin18:realtimeblurview:1.1.0'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'jp.wasabeef:glide-transformations:2.0.2'
-    compile 'com.google.code.gson:gson:2.7'
-    //compile 'me.everything:overscroll-decor-android:1.0.4'//https://github.com/EverythingMe/overscroll-decor
-    compile 'com.daasuu:EasingInterpolator:1.0.0'//need for shine button
-
-    //compile 'com.google.android.gms:play-services-plus:11.0.4'*/
 }
