--- a/testutils/build.gradle
+++ b/testutils/build.gradle
@@ -13,7 +13,8 @@
 // limitations under the License.
 apply from: '../constants.gradle'
 apply plugin: 'com.android.library'
-
+apply plugin: 'com.github.dcendents.android-maven'
+group = 'com.github.tplloi'
 android {
     compileSdkVersion project.ext.compileSdkVersion
     buildToolsVersion project.ext.buildToolsVersion
