--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ allprojects {
         maven {
             url "https://maven.google.com"
         }
+        maven { url 'https://jitpack.io' }
     }
     project.ext {
         exoplayerPublishEnabled = true
