--- a/demouiza2/build.gradle
+++ b/demouiza2/build.gradle
@@ -53,8 +53,12 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:26.1.0'
+    //compile 'com.android.support:appcompat-v7:26.1.0'
 
     compile project(':library-ui')
+
+    //uiza sdk
+    //compile 'com.github.tplloi:uiza-sdk-android:1.0.2'
+
     compile 'com.android.support:multidex:1.0.3'
 }
