--- a/demouiza/build.gradle
+++ b/demouiza/build.gradle
@@ -78,6 +78,12 @@ android {
         incremental true
         javaMaxHeapSize "4g"
     }
+
+    /*configurations.all {
+        resolutionStrategy {
+            force 'com.android.support:support-annotations:24.1.1'
+        }
+    }*/
 }
 
 repositories {
