--- a/corebase/build.gradle
+++ b/corebase/build.gradle
@@ -48,14 +48,12 @@ dependencies {
     compile 'com.android.support:multidex:1.0.3'
     compile 'org.greenrobot:eventbus:3.0.0'
 
-    //compile 'com.github.bumptech.glide:glide:3.7.0'
-    //compile 'com.github.bumptech.glide:glide:4.4.0'
-    compile('com.github.bumptech.glide:glide:4.4.0@aar') {
-        transitive = true;
+    compile('com.github.bumptech.glide:glide:4.5.0@aar') {
+        //transitive = true;
+        exclude group: "com.android.support"
     }
-    compile 'com.github.bumptech.glide:annotations:4.4.0'
-    //annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
-    //compile 'jp.wasabeef:glide-transformations:2.0.2'
+    //compile 'com.github.bumptech.glide:annotations:4.4.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
 
     //https://github.com/rubensousa/PreviewSeekBar
     compile 'com.github.rubensousa:previewseekbar:1.2'
