--- a/corebase/build.gradle
+++ b/corebase/build.gradle
@@ -49,8 +49,8 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
 
     compile('com.github.bumptech.glide:glide:4.5.0@aar') {
-        //transitive = true;
-        exclude group: "com.android.support"
+        transitive = true;
+        //exclude group: "com.android.support"
     }
     //compile 'com.github.bumptech.glide:annotations:4.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
