--- a/demouiza2/build.gradle
+++ b/demouiza2/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 
     //uiza sdk
     //compile 'com.github.tplloi:uiza-sdk-android:1.0.2'
+    //compile 'com.github.uizaio:uiza-sdk-player-android:1.0.3'
 
     //compile 'com.android.support:multidex:1.0.3'
 }
