--- a/corebase/build.gradle
+++ b/corebase/build.gradle
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         minSdkVersion 17
         targetSdkVersion 21
-        versionCode 7
-        versionName "1.0.7"
+        versionCode 8
+        versionName "1.0.8"
 
         renderscriptTargetApi 19
         renderscriptSupportModeEnabled true
@@ -49,9 +49,9 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
 
     //compile 'com.github.bumptech.glide:glide:4.5.0@aar'
-    compile('com.github.bumptech.glide:glide:4.3.0@aar') {
+    compile ('com.github.bumptech.glide:glide:4.5.0@aar') {
         transitive = true;
-        //exclude group: 'com.android.support'
+        exclude group: 'com.android.support'
     }
     //compile 'com.github.bumptech.glide:annotations:4.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
